# studium

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
Docs/: Implementation Workflow.md  Untitled.canvas
Docs/.obsidian/: workspace.json
Docs/00 - Product Foundation/: Feature Roadmap.md  Product Vision - Studium.md  User Principles.md
Docs/01 - Phase Roadmaps/Phase 1 - Vault Storage Core/: 00 Vault Storage Core Roadmap.md  1 - Initial Phase Roadmap.md  2 - Final Phase Roadmap.md  3 - Technical Plan.md  4 - Branch Plan.md
Docs/99 - Archive/: Branch - Template.md  Branch Plan Template.md  Code Understanding Rule of Law.md  Example Structure.md  Phase Roadmap - Template.md  Technical Plan - Template.md
src/studium/: __init__.py
tests/: test_smoke.py
tests/cli/: conftest.py  test_create_concept.py  test_e2e_phase1.py  test_validate_note.py  test_validate_vault.py
tests/parsing/: conftest.py  helpers.py  test_concept_note.py  test_frontmatter.py  test_sections.py  test_yaml_frontmatter.py
tests/schemas/: conftest.py  helpers.py  test_concept_note.py  test_learning_encounter.py  test_relationship.py  test_scaffold_module.py  test_validation.py  test_write_proposal.py
tests/serialization/: helpers.py  test_body.py  test_concept_id.py  test_concept_note.py  test_metadata_yaml.py  test_relationships.py
tests/validation/: test_concept_note.py  test_rules.py  test_severity.py
tests/vault/: test_paths.py  test_vault.py
tests/writes/: conftest.py  test_commit.py  test_create_proposal.py  test_hashing.py  test_update_proposal.py
(+67 files in other folders)
